--- a/assets/css/_buffalo.scss
+++ b/assets/css/_buffalo.scss
@@ -3,7 +3,8 @@
 }
 
 header {
-  background-color: #62a5ee;
+  background-color: white;
+  border: 1px solid black;
   padding: 10px 20px;
   box-sizing: border-box;
 }
