--- a/templates/application.plush.html
+++ b/templates/application.plush.html
@@ -5,8 +5,6 @@
     <meta charset="utf-8">
     <title>AI Chat - <%= title %></title>
     <%= stylesheetTag("application.css") %>
-    <meta name="csrf-param" content="authenticity_token" />
-    <meta name="csrf-token" content="<%= authenticity_token %>" />
     <link rel="icon" href="<%= assetPath("images/favicon.ico") %>">
   </head>
   <body>
@@ -17,8 +15,8 @@
     </div>
 
     <%= javascriptTag("application.js") %>
-    <%= if (javscript) { %>
-      <%= javascriptTag(javscript) %>
+    <%= if (javascript) { %>
+      <%= javascriptTag(javascript) %>
     <% } %>
   </body>
 </html>
