--- a/templates/pages/chat_main.plush.html
+++ b/templates/pages/chat_main.plush.html
@@ -1,9 +1,10 @@
 <div>
     <%= for (chat) in chats { %>
+      <%= if (chat.UserID == user.ID) { %>
         <%= for (character) in characters { %>
           <%= if (character.ID == chat.CharacterID) { %>
-            <%= if (chat.UserID == user.ID) { %>
               <%= form({action: "/chat/"+(chat.ID), method: "GET", class: "chat-form"}) { %>
+                <img src="<%= character.CharacterAssets[0] %>" alt="<%= character.CharacterName %>">
                 <button type="button" onclick="location.href='/chat/<%= chat.ID %>'"><%= character.CharacterName %></button>
               <% } %>
             <% } %>
