2025-03-26 2:12 navbar styling(character creator)

--- a/templates/components/_navbar.plush.html
+++ b/templates/components/_navbar.plush.html
@@ -17,7 +17,7 @@
                             </svg>                            
                           </div>
                           <div class="navbar-chat-user-id">
-                            <span>@<%= user.UserID %></span>
+                            <span>@<%= characterCreator.UserID %></span>
                           </div>
                         </div>
                       </button>
