2025-03-29 9:55 delete chat summary

--- a/assets/css/_buffalo.scss
+++ b/assets/css/_buffalo.scss
@@ -557,3 +557,12 @@ br {
   color: #fff;
   border-radius: 6px;
 }
+
+.chat-character-name {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.chat-preview {
+  margin: 0px;
+}
