--- a/templates/pages/create_character.plush.html
+++ b/templates/pages/create_character.plush.html
@@ -1,60 +1,79 @@
-<div>
+<div class="form-wrapper">
     <%= form({action: "/create-character", method: "POST", id: "create-character-form", enctype: "multipart/form-data"}) { %>
-        <div> <!-- 캐릭터 이름 -->
-            <label for="character-name">
-                <p><span class="required">*</span>캐릭터 이름</p>
-                <%= f.InputTag({name: "character-name", id: "character-name", maxlength: "15", placeholder: "캐릭터 이름을 입력해 주세요."}) %>
-            </label>
+      
+      <div> <!-- 캐릭터 이름 -->
+        <label for="character-name">
+          <p><span class="required">*</span>캐릭터 이름</p>
+          <%= f.InputTag({name: "character-name", id: "character-name", maxlength: "15", placeholder: "캐릭터 이름을 입력해 주세요.", "autocomplete": "off"}) %>
+        </label>
+      </div>
+  
+      <div> <!-- 캐릭터 소개 -->
+        <label for="character-info">
+          <p><span class="required">*</span>캐릭터 소개</p>내용에 {{char}} 또는 {{user}}를 입력하면 각각 캐릭터 이름과 대화 상대의 이름으로 대체됩니다.
+          <%= f.TextArea({name: "character-info", id: "character-info", maxlength: "1000", placeholder: "캐릭터 소개를 입력해 주세요.", "autocomplete": "off"}) %>
+        </label>
+      </div>
+  
+      <div> <!-- 캐릭터 성별 -->
+        <p><span class="required">*</span>캐릭터 성별</p>
+        <div class="gender-tab-group">
+          <label class="gender-tab">
+            <input type="radio" name="character-gender" value="female" />
+            <span>여성</span>
+          </label>
+          <label class="gender-tab">
+            <input type="radio" name="character-gender" value="male" />
+            <span>남성</span>
+          </label>
+          <label class="gender-tab">
+            <input type="radio" name="character-gender" value="etc" />
+            <span>기타</span>
+          </label>
         </div>
-        <div> <!-- 캐릭터 소개 -->
-            <label for="character-info">
-                <p><span class="required">*</span>캐릭터 소개</p>내용에 {{char}} 또는 {{user}}를 입력하면 각각 캐릭터 이름과 대화 상대의 이름으로 대체됩니다.
-                <%= f.TextArea({name: "character-info", id: "character-info", maxlength: "1000", placeholder: "캐릭터 소개를 입력해 주세요."}) %>
-            </label>
+      </div>
+  
+      <div> <!-- 한줄 소개 -->
+        <label for="character-oneline-info">
+          <p><span class="required">*</span>한줄 소개</p>
+          <%= f.InputTag({name: "character-oneline-info", id: "character-oneline-info", maxlength: "50", placeholder: "캐릭터 및 세계관에 대한 간략한 소개를 입력해 주세요.", "autocomplete": "off"}) %>
+        </label>
+      </div>
+  
+      <div> <!-- 세계관 설정 -->
+        <label for="world-view">
+          <p>세계관</p> {{user}} {{char}} 사용 가능
+          <%= f.TextArea({name: "world-view", id: "world-view", maxlength: "1000", placeholder: "세계관을 입력해 주세요."}) %>
+        </label>
+      </div>
+  
+      <div> <!-- 첫 메시지 -->
+        <label for="first-msg-character">
+          <p>첫 메시지</p>문장 양 옆을 * 로 감싸면 상황 설명을 할 수 있습니다. ex) *한 남자가 다가와 말을 건다.* 혹시 {{user}}씨 아니세요?
+          <%= f.TextArea({name: "first-msg-character", id: "first-msg-character", maxlength: "500", placeholder: "캐릭터가 건넬 첫 인사말을 입력해 주세요."}) %>
+        </label>
+      </div>
+  
+      <div class="file-upload-wrapper">
+        <div>
+          <p><span class="required">*</span>캐릭터 에셋</p>
+          <span>이미지 권장 크기는 550.4px × 885px (약62.2:100)입니다.</span>
         </div>
-        <div> <!-- 캐릭터 성별 -->
-            <p style="cursor: default;"><span class="required">*</span>캐릭터 성별</p>
-            <label for="character-gender-male">
-                <input type="radio" name="character-gender" value="male" id="character-gender-male"> 남성
-            </label>
-            <label for="character-gender-female">
-                <input type="radio" name="character-gender" value="female" id="character-gender-female"> 여성
-            </label>
-            <label for="character-gender-etc">
-                <input type="radio" name="character-gender" value="etc" id="character-gender-etc"> 기타
-            </label>
+        <div class="file-upload-controls">
+          <label for="character-assets" class="upload-button"><span>파일 선택</span></label>
+          <span id="file-name">선택된 파일 없음</span>
         </div>
-        <div> <!-- 한줄 소개 -->
-            <label for="character-oneline-info">
-                <p><span class="required">*</span>한줄 소개</p>
-                <%= f.InputTag({name: "character-oneline-info", id: "character-oneline-info", maxlength: "50", placeholder: "캐릭터 및 세계관에 대한 간략한 소개를 입력해 주세요."}) %>
-            </label>
-        </div>
-        <div> <!-- 세계관 설정 -->
-            <label for="world-view">
-                <p>세계관</p> {{user}} {{char}} 사용 가능
-                <%= f.TextArea({name: "world-view", id: "world-view", maxlength: "1000", placeholder: "세계관을 입력해 주세요."}) %>
-            </label>
-        </div>
-        <div> <!-- 첫 메시지 -->
-            <label for="first-msg-character">
-                <p>첫 메시지</p>문장 양 옆을 * 로 감싸면 상황 설명을 할 수 있습니다. ex) *한 남자가 다가와 말을 건다.* 혹시 {{user}}씨 아니세요?
-                <%= f.TextArea({name: "first-msg-character", id: "first-msg-character", maxlength: "500", placeholder: "캐릭터가 건넬 첫 인사말을 입력해 주세요."}) %>
-            </label>
-        </div>
-        <div> <!-- 캐릭터 이미지 -->
-            <label for="character-assets">
-                <p><span class="required">*</span>캐릭터 에셋</p>
-                <span>이미지 권장 크기는 550.4px × 885px (약62.2:100)입니다.</span>
-                <%= f.FileTag({accept: "image/*", multiple: "true", name: "character-assets", id: "character-assets"}) %>
-            </label>
-        </div>
-        <div> <!-- 제작자 코멘트 -->
-            <label for="creator-comment">
-                <p>제작자 코멘트</p>
-                <%= f.TextArea({name: "creator-comment", id: "creator-comment", maxlength: "500", placeholder: "이용자들에게 전할 메시지를 입력해 주세요."}) %>
-            </label>
-        </div>
-        <button>생성</button>
+        <%= f.FileTag({accept: "image/*", multiple: "true", name: "character-assets", id: "character-assets", class: "real-upload"}) %>
+      </div>
+  
+      <div> <!-- 제작자 코멘트 -->
+        <label for="creator-comment">
+          <p>제작자 코멘트</p>
+          <%= f.TextArea({name: "creator-comment", id: "creator-comment", maxlength: "500", placeholder: "이용자들에게 전할 메시지를 입력해 주세요."}) %>
+        </label>
+      </div>
+  
+      <button>생성</button>
+      
     <% } %>
-</div>
+  </div>
