--- a/templates/pages/signup.plush.html
+++ b/templates/pages/signup.plush.html
@@ -1,21 +1,21 @@
-<div>
-    <%= form({action: "/signup", id: "signup-form", method: "POST"}) { %>
+<div class="auth-wrapper">
+    <%= form({action: "/signup", id: "signup-form", class: "auth-form", method: "POST"}) { %>
         <div> <!-- 아이디 -->
             <label for="user-id">
                 <p>아이디</p>
-                <%= f.InputTag({name: "user-id", id: "user-id", maxlength: "15", placeholder: "아이디 입력(6~15자)"}) %>
+                <%= f.InputTag({name: "user-id", id: "user-id", maxlength: "15", lang: "en", inputmode: "latin", placeholder: "아이디 입력(6~15자)"}) %>
             </label>
         </div>
         <div> <!-- 비밀번호 -->
             <label for="password">
                 <p>비밀번호</p>
-                <%= f.InputTag({name: "password", id: "password", autocomplete: "off", maxlength: "20", type: "password", placeholder: "비밀번호 입력(8자~20자)"}) %>
+                <%= f.InputTag({name: "password", id: "password", maxlength: "20", type: "password", placeholder: "비밀번호 입력(8자~20자)"}) %>
             </label>
         </div>
         <div> <!-- 비밀번호 확인 -->
             <label for="password-check">
                 <p>비밀번호 확인</p>
-                <%= f.InputTag({id: "password-check", maxlength: "20", autocomplete: "off", type: "password", placeholder: "비밀번호 재입력"}) %>
+                <%= f.InputTag({id: "password-check", maxlength: "20", type: "password", placeholder: "비밀번호 재입력"}) %>
             </label>
         </div>
         <div> <!-- 이름 -->
