--- a/templates/application.plush.html
+++ b/templates/application.plush.html
@@ -17,6 +17,7 @@
     </div>
 
     <%= javascriptTag("application.js") %>
+    <%= javascriptTag("components/navbar.js") %>
     <%= if (javascript) { %>
       <%= javascriptTag(javascript) %>
     <% } %>
