--- a/templates/components/_navbar.plush.html
+++ b/templates/components/_navbar.plush.html
@@ -32,10 +32,10 @@
                 <a href="/">Home</a>
                 <a href="/chat">대화</a>
                 <a href="/create-character">캐릭터 생성</a>
-                <%= form({id: "logout-form", method: "POST", action: "/logout"}) { %>
-                  <a href="/"><%= user.UserID %></a>
+                  <div id="user-avatar-btn">
+                    <a href="/"><%= user.UserID %></a>
                     <button id="logout-btn" type="submit">로그아웃</button>
-                <% } %>
+                  </div>
               <% } %>
               <% } else { %>
                 <!-- 로그인 안 되었을 때 -->
