--- a/assets/css/_create-character.scss
+++ b/assets/css/_create-character.scss
@@ -7,7 +7,7 @@
     padding: 24px;
     border-radius: 1rem;
     max-width: 700px;
-    margin: 3.5% 0 0;
+    margin: 3.5% 0 2%;
   }
   
   #create-character-form .required {
