--- a/templates/pages/success.plush.html
+++ b/templates/pages/success.plush.html
@@ -1,4 +1,4 @@
-<div>
-    <h1><%= success %></h1>
-    <a href="/">Go to Home</a>
+<div id="success-page">
+    <h2><%= success %></h2>
+    <p><a href="/">Go home →</a></p>
 </div>
