--- a/assets/css/_buffalo.scss
+++ b/assets/css/_buffalo.scss
@@ -1,6 +1,8 @@
 @import "variable";
 @import "basic";
 @import "navbar";
+@import "popup";
+@import "home";
 @import "authform";
 @import "chat";
 @import "create-character";
