--- a/templates/components/_navbar.plush.html
+++ b/templates/components/_navbar.plush.html
@@ -14,7 +14,7 @@
                         <img src="/<%= character.CharacterAssets[0] %>" alt="<%= character.CharacterName %>" class="nav-chat-character-img">
                         <div class="nav-infodiv" data-character-info="<%= characterInfo %>">
                           <div class="navbar-div3">
-                            <span><%= character.CharacterName %></span>
+                            <span data-character-name="<%= character.CharacterName %>"><%= character.CharacterName %></span>
                             <svg xmlns="http://www.w3.org/2000/svg" class="navbar-chat-character-name-icon" viewBox="0 0 320 512">
                               <path fill="currentColor" d="M285.5 273.5c4.7-4.7 4.7-12.3 0-17L129.5 100.5c-4.7-4.7-12.3-4.7-17 0s-4.7 12.3 0 17L259 256 112.5 394.5c-4.7 4.7-4.7 12.3 0 17s12.3 4.7 17 0l156-156z"/>
                             </svg>                            
