--- a/assets/css/_popup.scss
+++ b/assets/css/_popup.scss
@@ -111,12 +111,38 @@
   margin-top: 12px;
   display: flex;
   gap: 8px;
+  width: 351.297px;
+  overflow-x: auto;
+  padding-bottom: 5px;
+  scrollbar-width: thin;
+  scrollbar-color: #444 transparent;
+  &::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #444;
+    border-radius: 4px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: transparent !important;
+  }
+  &::-webkit-scrollbar-button:single-button {
+    display: none !important;
+    background: none !important;
+  }
+
+  &::-webkit-scrollbar-button {
+    display: none !important;
+  }
 }
 
 .thumb {
-  width: 48px;
-  height: 48px;
+  width: 50.6px;
+  height: 50.6px;
   object-fit: cover;
+  flex-shrink: 0;
   border-radius: 4px;
   opacity: 0.6;
   cursor: pointer;
