--- a/assets/css/_chat.scss
+++ b/assets/css/_chat.scss
@@ -136,14 +136,14 @@
   cursor: pointer;
   display: flex;
   align-items: center;
-}
 
-#delete-chat svg {
-  width: 18px;
-  height: 18px;
-  stroke: white;
-  opacity: 0.7;
-  transition: opacity 0.2s ease;
+  svg {
+    width: 18px;
+    height: 18px;
+    stroke: white;
+    opacity: 0.7;
+    transition: opacity 0.2s ease;
+  }
 }
 
 .navbar-chat-go-back svg {
