--- a/assets/css/_popup.scss
+++ b/assets/css/_popup.scss
@@ -44,6 +44,32 @@
   .popup-oneline-info {
     margin-top: 2%;
   }
+  .character-meta {
+    margin-top: 8px;
+    display: flex;
+    font-size: 14px;
+    color: #aaa;
+    
+    justify-content: space-between;
+    align-items: center;
+    span {
+      display: inline-flex;
+      align-items: center;
+      gap: 4px; // 아이콘과 숫자 간격
+      background: none;
+      border: none;
+      padding: 0;
+      svg {
+        width: 18px;
+        height: 18px;
+        flex-shrink: 0;
+        display: block;
+        stroke: white;
+        opacity: 0.7;
+        transition: opacity 0.2s ease;
+      }
+    }
+  }
 }
 
 .popup-right {
@@ -97,14 +123,6 @@
 
 .character-image {
   border-radius: 8px;
-}
-
-.character-meta {
-  margin-top: 8px;
-  display: flex;
-  gap: 12px;
-  font-size: 14px;
-  color: #aaa;
 }
 
 .thumbnail-wrapper {
