--- a/assets/css/_chat.scss
+++ b/assets/css/_chat.scss
@@ -223,7 +223,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 14px 12px 5px;
+  padding: 7px 12px 5px;
 }
 
 .chat-header {
@@ -235,7 +235,7 @@
     display: flex;
     font-size: 18px;
     font-weight: 600;
-    margin: 8px 0;
+    margin: 8px 0 0 0;
   }
   
   .chat-icons {
@@ -243,7 +243,7 @@
     font-size: 14px;
     color: white;
     gap: 8px;
-    margin-bottom: 8px;
+    margin-bottom: 0px;
     justify-content: space-between;
     align-items: center;
     span {
@@ -311,6 +311,7 @@
 
 
 .chat-footer {
+  margin-bottom: 2px;
   font-size: 12px;
   color: #aaa;
   display: flex;
