--- a/templates/pages/chat-main.plush.html
+++ b/templates/pages/chat-main.plush.html
@@ -1,36 +1,42 @@
-<div class="chat-grid">
-  <%= for (chat) in chats { %>
-      <%= for (character) in characters { %>
-        <%= if (character.ID == chat.CharacterID) { %>
-          <div class="chat-card" data-chat-id="<%= chat.ID %>" data-character-id="<%= chat.CharacterID %>" data-user-name="<%= user.Name %>" data-char-name="<%= character.CharacterName %>">
-            <img src="/<%= character.CharacterAssets[0] %>" alt="<%= character.CharacterName %>" class="chat-img">
-            <div class="chat-body">
-              <div class="chat-header">
-                <h4 class="chat-character-name"><%= character.CharacterName %></h4>
-                <div class="chat-icons">
-                  <span><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M8.625 12a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H8.25m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H12m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0h-.375M21 12c0 4.556-4.03 8.25-9 8.25a9.764 9.764 0 0 1-2.555-.337A5.972 5.972 0 0 1 5.41 20.97a5.969 5.969 0 0 1-.474-.065 4.48 4.48 0 0 0 .978-2.025c.09-.457-.133-.901-.467-1.226C3.93 16.178 3 14.189 3 12c0-4.556 4.03-8.25 9-8.25s9 3.694 9 8.25Z"></path></svg><%= len(chat.UserMessage) %></span>
-                  <span>🤍</span>
+<div class="chat-main">
+  <section class="chat-main-header">
+    <h2>대화</h2>
+    <!-- 필터, 정렬 넣을 곳 -->
+  </section>
+  <div class="chat-grid">
+    <%= for (chat) in chats { %>
+        <%= for (character) in characters { %>
+          <%= if (character.ID == chat.CharacterID) { %>
+            <div class="chat-card" data-chat-id="<%= chat.ID %>" data-character-id="<%= chat.CharacterID %>" data-user-name="<%= user.Name %>" data-char-name="<%= character.CharacterName %>">
+              <img src="/<%= character.CharacterAssets[0] %>" alt="<%= character.CharacterName %>" class="chat-img">
+              <div class="chat-body">
+                <div class="chat-header">
+                  <h4 class="chat-character-name"><%= character.CharacterName %></h4>
+                  <div class="chat-icons">
+                    <span><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M8.625 12a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H8.25m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H12m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0h-.375M21 12c0 4.556-4.03 8.25-9 8.25a9.764 9.764 0 0 1-2.555-.337A5.972 5.972 0 0 1 5.41 20.97a5.969 5.969 0 0 1-.474-.065 4.48 4.48 0 0 0 .978-2.025c.09-.457-.133-.901-.467-1.226C3.93 16.178 3 14.189 3 12c0-4.556 4.03-8.25 9-8.25s9 3.694 9 8.25Z"></path></svg><%= len(chat.UserMessage) %></span>
+                    <span>🤍</span>
+                  </div>
+                </div>
+                <p class="chat-preview" style="font-size: 14px;">
+                  <%= if (len(chat.AiMessage) > 0) { %>
+                    <%= chat.AiMessage[len(chat.AiMessage) - 1] %>
+                  <% } else { %>
+                    <%= character.FirstMsgCharacter %>
+                  <% } %>
+                </p>
+                <div class="chat-buttons">
+                  <button class="character-info-btn">캐릭터 정보</button>
+                  <button onclick="location.href='/chat/<%= chat.ID %>'">대화 시작</button>
+                  <button class="delete-chat">대화 삭제</button>
+                </div>
+                <div class="chat-footer">
+                  <span><%= chat.UpdatedAt.Format("2006-01-02 15:04") %></span>
+                  <span class="chat-footer-username"><%= user.Name %></span>
                 </div>
               </div>
-              <p class="chat-preview" style="font-size: 14px;">
-                <%= if (len(chat.AiMessage) > 0) { %>
-                  <%= chat.AiMessage[len(chat.AiMessage) - 1] %>
-                <% } else { %>
-                  <%= character.FirstMsgCharacter %>
-                <% } %>
-              </p>
-              <div class="chat-buttons">
-                <button class="character-info-btn">캐릭터 정보</button>
-                <button onclick="location.href='/chat/<%= chat.ID %>'">대화 시작</button>
-                <button class="delete-chat">대화 삭제</button>
-              </div>
-              <div class="chat-footer">
-                <span><%= chat.UpdatedAt.Format("2006-01-02 15:04") %></span>
-                <span class="chat-footer-username"><%= user.Name %></span>
-              </div>
             </div>
-          </div>
+          <% } %>
         <% } %>
       <% } %>
-    <% } %>
+  </div>
 </div>
