스크롤 버튼 2번 연속 클릭 방지

--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -33,7 +33,7 @@
     overflow-x: auto;
     max-width: 1280px;
     overflow-y: hidden;
-    scroll-behavior: smooth;
+    scroll-behavior: auto;
     white-space: nowrap;
     flex-shrink: 0;
     scrollbar-width: none;        /* Firefox */
