--- a/templates/pages/index.plush.html
+++ b/templates/pages/index.plush.html
@@ -23,7 +23,7 @@
         </section>
     <% } %>
     <section class="home-main-character">
-        <h2>캐릭터</h2>
+        <h2>✨ 전체 캐릭터</h2>
         <div class="character-div-list">
             <%= for (character) in characters { %>
                 <div class="home-character-div" data-character-id="<%= character.ID %>">
